[gd_scene load_steps=8 format=3 uid="uid://wgs1qpbo0j5f"]

[ext_resource type="Texture2D" uid="uid://pjuugece5qkx" path="res://Graphics/Pictures/Battle/databox_hgss.png" id="3"]
[ext_resource type="FontFile" uid="uid://bc0h4u24mdptb" path="res://Fonts/hgss_health.ttf" id="3_ay0qn"]
[ext_resource type="Script" path="res://Scripts/Battle/PlayerDatabox.gd" id="4"]
[ext_resource type="FontFile" uid="uid://ddq6mqha1adun" path="res://Fonts/pokemon-ds-font.ttf" id="4_6247j"]

[sub_resource type="LabelSettings" id="LabelSettings_dengd"]
font = ExtResource("3_ay0qn")
font_size = 8
font_color = Color(0.286275, 0.286275, 0.286275, 1)

[sub_resource type="LabelSettings" id="LabelSettings_iwdbg"]
font = ExtResource("3_ay0qn")
font_size = 8
font_color = Color(0.286275, 0.286275, 0.286275, 1)
shadow_color = Color(0.729412, 0.729412, 0.729412, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0bqq4"]
font = ExtResource("4_6247j")
font_color = Color(0.286275, 0.286275, 0.286275, 1)

[node name="PlayerDatabox" type="Sprite2D"]
texture_filter = 1
texture = ExtResource("3")
centered = false
region_enabled = true
region_rect = Rect2(3, 34, 128, 47)
script = ExtResource("4")

[node name="HealthBar" type="Sprite2D" parent="."]
position = Vector2(72, 25)
scale = Vector2(8, 1)
texture = ExtResource("3")
centered = false
region_enabled = true
region_rect = Rect2(2, 13, 3, 3)

[node name="ExpBar" type="Sprite2D" parent="."]
position = Vector2(24, 42)
scale = Vector2(32, 1)
texture = ExtResource("3")
centered = false
region_enabled = true
region_rect = Rect2(2, 28, 3, 2)

[node name="Level" type="Label" parent="."]
offset_left = 104.0
offset_top = 15.0
offset_right = 128.0
offset_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "100"
label_settings = SubResource("LabelSettings_dengd")

[node name="HealthText" type="HBoxContainer" parent="."]
offset_left = 64.0
offset_top = 34.0
offset_right = 119.0
offset_bottom = 45.0
alignment = 1

[node name="Label" type="Label" parent="HealthText"]
offset_right = 55.0
offset_bottom = 11.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "000/234"
label_settings = SubResource("LabelSettings_iwdbg")
horizontal_alignment = 1

[node name="NameContainer" type="MarginContainer" parent="."]
offset_left = 20.0
offset_top = 7.0
offset_right = 87.0
offset_bottom = 24.0

[node name="Name" type="Label" parent="NameContainer"]
offset_right = 67.0
offset_bottom = 17.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Pokemon 1"
label_settings = SubResource("LabelSettings_0bqq4")

[node name="GenderSymbol" type="Sprite2D" parent="."]
position = Vector2(87, 9)
texture = ExtResource("3")
centered = false
region_enabled = true
region_rect = Rect2(2, 1, 7, 11)
